@@ -1,3 +1,13 @@
+2008-03-23  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/layout.R (layout.fruchterman.reingold) :
+	add 'miny' and 'maxy' parameters
+	(layout.kamada.kawai) : add 'fixz' parameter
+	* interfaces/R/src/rinterface.c.in (R_igraph_layout_kamada_kawai)
+	(R_igraph_layout_kamada_kawai_3d) : added 'fixz' argument
+	(R_igraph_layout_fruchterman_reingold) : added 'miny' and 'maxy' 
+	arguments
+
 2008-02-24  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/layout.R (layout.reingold.tilford)
